# Istos

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  istos_architecture.puml  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/agent/: index.html
api/cli/: index.html
api/communication/config/: index.html
api/communication/durable/: index.html
api/communication/persist/: index.html
api/communication/sessions/: index.html
api/consistency/config/: index.html
api/consistency/databases/: index.html
api/consistency/redis_storage/: index.html
api/consistency/sqlalchemy_storage/: index.html
api/context/: index.html
api/errors/: index.html
api/fitness/: index.html
api/istos/: index.html
api/logging/: index.html
api/queue/: index.html
api/retry/: index.html
api/router/: index.html
api/validation/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  installation.md  license.md
docs/api/: agent.md  asgi.md  cli.md  context.md  errors.md  fitness.md  gateway.md  health.md  istos.md  logging.md  mcp.md  retry.md  router.md  validation.md
docs/recipes/: agent-channel.md  agent-tools.md  custom-middleware.md  durable-orders.md  health-checks.md  index.md  production-service.md  pubsub-telemetry.md  redis-storage.md  rpc-lifespan.md  scaffold-service.md  secure-rpc.md
docs/reference/: wire-protocol.md
docs/user-guide/: agent-loop.md  application-databases.md  architecture-health.md  authorization.md  capabilities.md  channels.md  cli.md  dependency-injection.md  deployment.md  durable-messaging.md  getting-started.md  http-gateway.md  liveliness.md  mcp.md  middleware.md  observability.md  pubsub.md  retry.md  rpc.md  security.md  storage.md  testing.md  validation.md  work-queues.md
examples/: README.md  authz_client.py  authz_server.py  demo_service.py
examples/fable-workflow/: README.md  apidocs.py  chat.py  evidence.py  executor.py  judge.py  llm.py  method.py  orchestrator.py  queues.py  sandbox.py
installation/: index.html
learning/: learning.tex
license/: index.html
recipes/: index.html
recipes/agent-channel/: index.html
recipes/agent-tools/: index.html
recipes/custom-middleware/: index.html
recipes/durable-orders/: index.html
recipes/health-checks/: index.html
recipes/production-service/: index.html
recipes/pubsub-telemetry/: index.html
recipes/redis-storage/: index.html
recipes/rpc-lifespan/: index.html
recipes/scaffold-service/: index.html
recipes/secure-rpc/: index.html
reference/wire-protocol/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/changelog/: index.html
site/contributing/: index.html
site/installation/: index.html
site/license/: index.html
site/recipes/: index.html
site/search/: search_index.json
src/istos/: Istos.py  __init__.py  app.py  asgi.py  cli.py  context.py  errors.py  fitness.py  gateway.py  health.py  logging.py  mcp.py  retry.py  routing.py  validation.py
tests/: conftest.py  test_advanced.py  test_agent.py  test_asgi.py  test_asyncapi.py  test_authz_batteries.py  test_channel.py  test_channel_fabric.py  test_client_decorators.py  test_coordinator.py  test_cron.py  test_databases.py  test_dedup.py  test_di_depends.py  test_di_integration.py  test_discovery.py  test_durability_modes.py  test_durable_pubsub.py  test_envelope.py  test_error_replies.py  test_fitness.py  test_gateway.py  test_hardening.py  test_lifespan.py  test_logging.py  test_mcp.py  test_middleware_primitives.py  test_network_integration.py  test_persist.py  test_production.py  test_pubsub.py  test_queue.py  test_ratelimit.py  test_redis_storage.py  test_replay.py  test_retry.py  test_router.py  test_security.py  test_selectors.py  test_serialization.py  (+9 more)
user-guide/agent-loop/: index.html
user-guide/application-databases/: index.html
user-guide/architecture-health/: index.html
user-guide/authorization/: index.html
user-guide/capabilities/: index.html
user-guide/channels/: index.html
user-guide/cli/: index.html
user-guide/dependency-injection/: index.html
user-guide/deployment/: index.html
user-guide/durable-messaging/: index.html
user-guide/getting-started/: index.html
user-guide/http-gateway/: index.html
user-guide/liveliness/: index.html
user-guide/mcp/: index.html
user-guide/middleware/: index.html
user-guide/observability/: index.html
user-guide/pubsub/: index.html
user-guide/retry/: index.html
user-guide/rpc/: index.html
user-guide/security/: index.html
user-guide/storage/: index.html
user-guide/testing/: index.html
user-guide/validation/: index.html
user-guide/work-queues/: index.html
(+236 files in other folders)
