[project]
name = "istos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "amirrezaei", email = "corvology@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "eclipse-zenoh>=1.7.2",
    "msgpack>=1.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.22.1"]
all = ["aiosqlite>=0.22.1", "aiohttp>=3.9.0"]

[project.scripts]
istos = "istos:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
