[project]
name = "istos"
version = "0.3.0"
description = "A unified Python framework for distributed systems and multi-agent applications over Eclipse Zenoh"
readme = "README.md"
authors = [
    { name = "amirrezaei", email = "corvology@gmail.com" }
]
license = "Apache-2.0"
requires-python = ">=3.10,<3.15"
keywords = ["zenoh", "distributed-systems", "pubsub", "rpc", "microservices", "agents", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.13.5",
    "eclipse-zenoh>=1.7.2",
    "msgpack>=1.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
# SQLAlchemy backend targets any SQL database; the client brings their own
# async driver via the URL (e.g. asyncpg or psycopg for Postgres).
sqlalchemy = [
    "sqlalchemy[asyncio]>=2.0.0",
]
otel = [
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
]
# Brokerless producer-crash durability: persist durable pub/sub streams to
# S3/MinIO object storage (see Istos.persist / @publish(persist="s3://…")).
s3 = [
    "aioboto3>=13.0.0",
]
# JWT authentication for the authorizer gate (JWTAuthorizer).
jwt = [
    "pyjwt>=2.8.0",
]
# Everything — composed from the individual extras so each dependency's version
# is pinned in exactly one place.
all = [
    "istos[redis,sqlalchemy,otel,s3,jwt]",
]
dev = [
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/0x416d6972/Istos"
Documentation = "https://0x416d6972.github.io/Istos/"
Repository = "https://github.com/0x416d6972/Istos"
Issues = "https://github.com/0x416d6972/Istos/issues"
Changelog = "https://github.com/0x416d6972/Istos/blob/main/docs/changelog.md"

[project.scripts]
istos = "istos:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
    "types-PyYAML>=6.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.22.1",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: tests requiring a live Zenoh network (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["istos"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

# Default rules only (pyflakes F + a subset of pycodestyle E). Line length (E501)
# stays off by default — the codebase favors readable long lines.
[tool.ruff.lint.per-file-ignores]
# Guarded `import` used only to test dependency availability (HAS_PYDANTIC pattern).
"src/istos/discovery/asyncapi.py" = ["F401"]
"src/istos/validation.py" = ["F401"]
"src/istos/primitives/handler.py" = ["F401"]
